# primal

./: CMakeLists.txt  readme.md
src/: Vendor.hpp
src/runtime/: RuntimeEngine.cpp  RuntimeEngine.hpp
src/runtime/reconstructor/: Reconstructor.hpp
src/runtime/reconstructor/reconstructors/: IATReconstructor.cpp  IATReconstructor.hpp
src/segment/: SegmentTranslator.hpp
src/segment/internal/: SegmentNativeData.cpp  SegmentProvider.hpp
src/util/: CommonUtil.hpp  PanicUtil.hpp
src/util/stuff/: RuntimeDefinitions.hpp
